# pyreadstat

./: .gitignore  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  change_log.md  compiling_recipes.txt  how_to_test.md  pyproject.toml  requirements.txt  setup.py  windows_compilation.md
.github/ISSUE_TEMPLATE/: pyreadstat-issue.md
.github/workflows/: build-and-test.yml  ci.yml  lint.yml
docs/: Makefile  conf.py  how to build the documentation.txt  index.rst  make.bat
pyreadstat/: __init__.py  __init__.pyi  _readstat_parser.c  _readstat_parser.pxd  _readstat_parser.pyx  _readstat_writer.c  _readstat_writer.pxd  _readstat_writer.pyx  _readstat_writer_pandas.pyx  conditional_includes.h  pyclasses.py  pyfunctions.py  pyreadstat.c  pyreadstat.pxd  pyreadstat.py  pyreadstat.pyx  readstat_api.pxd  worker.py
scripts/: compiling_recipes.txt  mingw_wheel_build.sh
src/: readstat.h  readstat_error.c  readstat_io_buffer.c  readstat_io_buffer.h  readstat_metadata.c  readstat_parser.c  readstat_variable.c  readstat_writer.c
src/sas/: readstat_sas.c  readstat_sas.h  readstat_sas7bcat_read.c  readstat_sas7bcat_write.c  readstat_sas7bdat_read.c  readstat_sas7bdat_write.c  readstat_xport_read.c  readstat_xport_write.c
src/spss/: readstat_por_read.c  readstat_sav.c  readstat_sav.h  readstat_sav_parse.c  readstat_sav_parse.rl  readstat_sav_parse_mr_name.c  readstat_sav_parse_mr_name.h  (+7 more)
tests/: random_dates.py  test_basic.py  test_http_integration.py  test_mypy_setup.ini  test_narwhalified.py  test_runtime_types.py  test_typing.yml  test_version.py  typing_tests.pyi
(+67 files in other folders)
