[build-system]
requires = [
    "setuptools",
    "wheel",
    "cython"
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "setuptools>=80.0.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "polars>=1.30.0",
    "cython>=3.0.0",
    "narwhals>=2.10.1",
]
test = [
    "pytest>=8.0.0",
    "mypy>=1.20.0",
    "pytest-mypy-plugins>=4.0.0",
    "pandas-stubs>=2.0.0",
    "pandas>=2.0.0",
    "polars>=1.30.0",
    "narwhals>=2.10.1",
]
